<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FaceMatcher</string>
    <string name="show_about_button">ABT</string>
    <string name="settings_button">SET</string>
    <string name="show_leaderboard_button">Highscores</string>
    <string name="matchname_button">Pick the Right Name</string>
    <string name="matchface_button">Pick the right Face</string>
    <string name="timedgame_button">Timed Matching</string>
    <string name="go_home_button">Home</string>
    <string name="image_type">image/png</string>
    <string name="score_string">Score:</string>
    <string name="timer_string">00:00</string>
    <string name="sample_name_string">Robert De Niro</string>
    <string name="pick_challenge">pick your challenge...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="game_close_warning">This will abort the game, proceed?</string>
    <string name="show_score_warning">Game Over</string>
    <string name="about_string">About Face Matcher:</string>
    <string name="about_text">Face Matcher is a game made using data from Staff Photo page. Try to match face to the name and see how well you remember the names of your colleagues </string>

</resources>
