<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fullscreen_content_controls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">
  
    <LinearLayout
        android:id="@+id/game_feedbacks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|fill_horizontal"
        android:measureWithLargestChild="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/score_string"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView 
         android:id="@+id/player_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="right"
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="visible"
         android:text="@string/timer_string"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/face_thumb_row1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top|fill_horizontal"
        android:measureWithLargestChild="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/face_thumbnail.1.1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_type"
            android:scaleType="fitCenter"
            android:src="@drawable/deniro" />

        <ImageView
            android:id="@+id/face_thumbnail.1.2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_type"
            android:scaleType="fitCenter"
            android:src="@drawable/billgatesad" />

   </LinearLayout>
   <LinearLayout
        android:id="@+id/face_thumb_row2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="top|fill_horizontal"
        android:measureWithLargestChild="true"
        android:orientation="horizontal" >
        <ImageView
        android:id="@+id/face_thumbnail.2.1"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_type"
        android:scaleType="fitCenter"
        android:src="@drawable/muhammadali" />
        <ImageView
        android:id="@+id/face_thumbnail.2.2"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_type"
        android:scaleType="fitCenter"
        android:src="@drawable/johncarmack" />
   </LinearLayout>
   <TextView 
         android:id="@+id/person_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_gravity="center_horizontal"
         android:textSize="26sp"
         android:textStyle="bold"
         android:text="@string/sample_name_string"/>
</LinearLayout>